--- a/myStyle.css
+++ b/myStyle.css
@@ -844,6 +844,7 @@ small.copyright {
   margin-top: 10%;
   border-top: 1px solid #8C9BAF;
   padding-top: 25px;
+  text-align: center;
 }
 
 /* ------------------------------------------------------------------------------------------------------------- */
