--- a/projectStyle.css
+++ b/projectStyle.css
@@ -507,7 +507,7 @@ img.mpf-hiw-img {
         margin-top: 0;
       }
 
-      #mpf-hiw-img-intro {
+      #mpf_home-illustration {
         margin-top: 0;
       }
 
