--- a/myStyle.css
+++ b/myStyle.css
@@ -788,7 +788,7 @@ section.side-projects {
                 box-shadow: 0 2px 4px 0 rgba(0,0,0,0.50);
       }
       #wishUp-tile {
-        background: #FFFFFF;
+        background: black;
         border: 1px solid #D757FF;
         -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.50);
                 box-shadow: 0 2px 4px 0 rgba(0,0,0,0.50);
