--- a/projectStyle.css
+++ b/projectStyle.css
@@ -21,7 +21,7 @@ a:hover {
 }
 
 a.freepik-credits {
-  margin-top: 25px;
+  margin-top: 30px;
   text-decoration: none;
   font-weight: 200;
   font-size: .7rem;
@@ -54,6 +54,7 @@ h2 {
 
 h4 {
   letter-spacing: .1rem;
+  line-height: 2rem;
 }
 
 h5 {
@@ -151,9 +152,14 @@ a.back-to-home {
   .black {
     background-color: black;
   }
-      .wrapper.black div {
+      .black h4 {
         color: white;
       }
+  .division-line {
+    border-bottom: 1px solid #8C9BAF;
+  }
+
+
   .bg-img {
     position: absolute;
     width: 100vw;
@@ -328,7 +334,7 @@ footer {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 25px 8%;
-  border-top: 1px solid #8C9BAF;
+  border-top: 1px solid #EBEEF3;
 }
 
     .footer-links a {
@@ -506,14 +512,14 @@ img.mpf-hiw-img {
 
 @media screen and (max-width: 730px) {
 
-  #hiw-section .block:nth-of-type(1) { -webkit-box-ordinal-group: 2; -ms-flex-order: 1; order: 1; }
-  #hiw-section .block:nth-of-type(2) { -webkit-box-ordinal-group: 3; -ms-flex-order: 2; order: 2; }
-  #hiw-section .block:nth-of-type(3) { -webkit-box-ordinal-group: 5; -ms-flex-order: 4; order: 4; }
-  #hiw-section .block:nth-of-type(4) { -webkit-box-ordinal-group: 4; -ms-flex-order: 3; order: 3; }
-  #hiw-section .block:nth-of-type(5) { -webkit-box-ordinal-group: 6; -ms-flex-order: 5; order: 5; }
-  #hiw-section .block:nth-of-type(6) { -webkit-box-ordinal-group: 7; -ms-flex-order: 6; order: 6; }
-  #hiw-section .block:nth-of-type(7) { -webkit-box-ordinal-group: 9; -ms-flex-order: 8; order: 8; }
-  #hiw-section .block:nth-of-type(8) { -webkit-box-ordinal-group: 8; -ms-flex-order: 7; order: 7; }
+  .hiw-section .block:nth-of-type(1) { -webkit-box-ordinal-group: 2; -ms-flex-order: 1; order: 1; }
+  .hiw-section .block:nth-of-type(2) { -webkit-box-ordinal-group: 3; -ms-flex-order: 2; order: 2; }
+  .hiw-section .block:nth-of-type(3) { -webkit-box-ordinal-group: 5; -ms-flex-order: 4; order: 4; }
+  .hiw-section .block:nth-of-type(4) { -webkit-box-ordinal-group: 4; -ms-flex-order: 3; order: 3; }
+  .hiw-section .block:nth-of-type(5) { -webkit-box-ordinal-group: 6; -ms-flex-order: 5; order: 5; }
+  .hiw-section .block:nth-of-type(6) { -webkit-box-ordinal-group: 7; -ms-flex-order: 6; order: 6; }
+  .hiw-section .block:nth-of-type(7) { -webkit-box-ordinal-group: 9; -ms-flex-order: 8; order: 8; }
+  .hiw-section .block:nth-of-type(8) { -webkit-box-ordinal-group: 8; -ms-flex-order: 7; order: 7; }
 
   .block {
     padding: 5% 20px;
