--- a/myStyle.css
+++ b/myStyle.css
@@ -399,7 +399,7 @@ a#emailIcon {
       }
 
       .overlay i {
-
+        color: white;
         position: absolute;
         top: 25px;
         right: 25px;
