--- a/myStyle.css
+++ b/myStyle.css
@@ -38,6 +38,14 @@ h2 {
   line-height: 2.5rem;
 }
 
+h3 {
+  color: #8C9BAF;
+  font-weight: 200;
+  letter-spacing: .8em;
+  text-align: center;
+  line-height: 2em;
+}
+
 
 .ease-in, .ease-in-w, .ease-in-a, .ease-in-o {
   visibility: hidden;
@@ -448,7 +456,7 @@ section.intro {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: #2A2F36;
+  background-color: #f5f5f5;
   color: #8C9BAF;
 }
 
@@ -456,25 +464,9 @@ section.intro {
         margin-top: -5%;
       }
 
-      #intro_text h5 {
-        font: normal 200 0.8rem 'Fira Sans', sans-serif;
-        font-size: calc(0.7rem + 0.2vw);
-        letter-spacing: 0.5rem;
-        color: white;
-        visibility: hidden;
+      #intro_text strong {
+        color: #2A2F36;
       }
-
-      #intro_text p {
-        width: 50vw;
-        font-size: 1.1rem;
-        font-size: calc(1rem + 0.2vw);
-        font-weight: 200;
-        letter-spacing: 0.05rem;
-        line-height: 2.1rem;
-        visibility: hidden;
-      }
-
-          #intro_text p strong {color: #C2F14F; font-weight: 900; font-size: 1rem; letter-spacing: .2em;}
 
         a.CTAarrow {
           display: -webkit-inline-box;
@@ -503,7 +495,7 @@ section.intro {
               stroke-dashoffset: 158;
             }
             .CTAarrow .arrow-circle {
-              border: 1px solid #f3f3f3;
+              border: 1px solid #8C9BAF;
               border-radius: 50%;
               width: 50px;
               height: 50px;
@@ -513,7 +505,7 @@ section.intro {
             .arrow-down .arrow {
               width: 1px;
               height: 100px;
-              background-color: white;
+              background-color: #F3425E;
               -webkit-transition: 1s;
               -o-transition: 1s;
               transition: 1s;
@@ -529,7 +521,7 @@ section.intro {
                   bottom: 0;
                   width: 1px;
                   height: 15%;
-                  background-color: white;
+                  background-color: #F3425E;
                   -webkit-transition: .5s ease-in-out;
                   -o-transition: .5s ease-in-out;
                   transition: .5s ease-in-out;
@@ -551,17 +543,20 @@ section.intro {
             -webkit-transform: scaleY(.6);
                 -ms-transform: scaleY(.6);
                     transform: scaleY(.6);
+            background-color: #8C9BAF;
           }
           .CTAarrow.arrow-down:hover .arrow:after {
             -webkit-transform: rotate(45deg);
                 -ms-transform: rotate(45deg);
                     transform: rotate(45deg);
             opacity: 1;
+            background-color: #8C9BAF;
           }
           .CTAarrow.arrow-down:hover .arrow:before {
             -webkit-transform: rotate(-45deg);
                 -ms-transform: rotate(-45deg);
                     transform: rotate(-45deg);
+            background-color: #8C9BAF;
           }
 
 
@@ -645,11 +640,12 @@ section.side-projects {
         text-transform: uppercase;
       }
 
-      #schecker-CTA {
-        margin-top: 5%;
+
+      #schecker-CTA, #mpf-CTA, #wishUp-CTA {
+        margin-top: 2%;
       }
 
-          .CTA-button svg {
+          svg.button-outline {
             display: inline;
             stroke-dasharray: 50 200;
             stroke-dashoffset: 95;
@@ -705,19 +701,42 @@ section.side-projects {
 
 
 /* Other concepts section */
-.project-tile {
-  width: 42vw;
-  height: 60vh;
-  min-width: 320px;
-  min-height: 320px;
-  overflow: hidden;
-  margin: 2%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: .3s;
+#other-concepts {
+  background-color: black;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
+#other-concepts .content-column {
+  width: auto;
+}
+
+  #other-concepts h5,
+  #other-concepts p {
+    color: #8C9BAF;
+  }
+
+.wrapper-incubation {
+  margin: 3% auto;
+}
+  .incubation-tile {
+    width: 300px;
+    height: 400px;
+    border-radius: 50%/60% 60% 40% 40%;
+    overflow: hidden;
+    margin: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .3s;
+    background: #000000;
+    box-shadow: 0 2px 40px 0 rgba(221,221,221,0.50);
+  }
+  .decorative-line {
+    width: 8%;
+    height: 1px;
+    background-color: #8C9BAF;
+  }
       #mpf-video {
         width: 100%;
         height: 100%;
@@ -746,12 +765,12 @@ section.side-projects {
       }
 
   #wishUp-tile {
-    background-image: linear-gradient(0deg, #000000 0%, #6B2880 100%);
+    background-image: linear-gradient(0deg, #000000 17%, #390B48 100%);
     background-color: black;
   }
 
       img#wishUp-mockup-ip {
-        width: 80%;
+        width: 90%;
         height: auto;
       }
 
@@ -761,6 +780,19 @@ section.side-projects {
   /* Works Showcase */
 #works {
   background-color: #EBEEF3;
+}
+
+.project-tile {
+  width: 42vw;
+  height: 60vh;
+  min-width: 320px;
+  min-height: 320px;
+  overflow: hidden;
+  margin: 2%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: .3s;
 }
 
   .tile-bg {
@@ -829,11 +861,19 @@ footer {
 /* ----------------------------------------------------------------------------------------------- */
 
 
+@media screen and (max-width: 783px) {
+  .decorative-line {
+    display: none;
+  }
+}
+
+
 @media screen and (max-width: 696px) {
   section.side-projects {
     padding-top: 5%;
     padding-bottom: 20%;
   }
+
   footer {
     position: relative;
   }
