--- a/projectStyle.css
+++ b/projectStyle.css
@@ -48,8 +48,17 @@ h1 {
 }
 
 h2 {
+  font-size: calc(1.3rem + 1vw);
   letter-spacing: .15rem;
   line-height: 2.5rem;
+}
+
+h3 {
+  color: #8C9BAF;
+  font-weight: 200;
+  letter-spacing: .8em;
+  text-align: center;
+  line-height: 2em;
 }
 
 h4 {
@@ -61,11 +70,6 @@ h5 {
     letter-spacing: .5rem;
     font-weight: 900;
     line-height: 2rem;
-  }
-
-  h5.secondary-title {
-    margin-bottom: 0;
-    letter-spacing: .1rem;
   }
 
 h6 {
@@ -146,37 +150,35 @@ a.invision-CTA {
         transform: scale(1.15);
       }
 
+section {
+  width: 100vw;
+  margin-bottom: calc(40px + 5%);
+}
+
+  section h3 {
+    margin: 5% auto;
+  }
+
   .wrapper {
+    width: 100%;
+    height: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    padding: 4% 25px;
-    max-width: 100vw;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    flex-flow: row wrap;
+    -webkit-box-orient: horizontal;-webkit-box-direction: normal;-ms-flex-flow: row wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
+    padding: 0 25px;
   }
-
-
-  .grey {
-    background-color: #EBEEF3;
-  }
-  .black {
-    background-color: black;
-  }
-      .black h4 {
-        color: white;
-      }
-  .division-line {
-    border-bottom: 1px solid #8C9BAF;
+  .wrapper.odd {
+    flex-wrap: wrap-reverse;
   }
 
 
@@ -192,11 +194,6 @@ a.invision-CTA {
         background-image: url("./Assets/mpf-introBG.png");
       }
 
-  .unfinished-notice {
-    align-items: center;
-    margin-bottom: 15%;
-  }
-
 
   .block {
     display: -webkit-box;
@@ -206,34 +203,17 @@ a.invision-CTA {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    width: 35vw;
-    min-width: 300px;
+    width: 40%;
+    min-width: 320px;
     height: auto;
-    margin: auto;
-    padding: 0 20px 5%;
+    margin: 5% auto;
   }
-      img.mockup {
-        width: 100%;
-        max-width: 672px;
-      }
+  .no-text-block {
+    align-items: center;
+  }
 
-      .block.intro {
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
-        -webkit-box-pack: start;
-            -ms-flex-pack: start;
-                justify-content: flex-start;
-        text-align: center;
-        -webkit-box-flex: 1;
-            -ms-flex: 1 1 100%;
-                flex: 1 1 100%;
-      }
-          img.logo {
-            width: 230px;
-            margin-bottom: 20px;
-            margin-top: 10px;
-          }
+
+
 
           a.cta-w-label {
             display: -webkit-box;
@@ -340,34 +320,37 @@ a.invision-CTA {
                       }
 
 footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
+  position: relative;
+  z-index: 1000;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 25px;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 25px 8%;
-  border-top: 1px solid #EBEEF3;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #EBEEF3;
 }
-
-    .footer-links a {
-      font-weight: 400;
-      margin-right: 25px;
-    }
-
-    small.footer-text {
+    .copyright {
       color: #8C9BAF;
       letter-spacing: .1em;
+      font-size: .7em;
     }
+    .footer-links {text-align: right;}
+    .footer-links a {
+      color: #8C9BAF;
+      letter-spacing: .1em;
+      font-size: .8em;
+      font-weight: 700;
+      text-align: right;
+      margin-left: 25px;
+    }
+      .footer-links a:hover {
+        color: #F3425E;
+      }
 
-/* -------------------- How it works block ------------------------ */
+/* -------------------- Schecker How it works block ------------------------ */
 
   .hiw.input {
     display: inline-block;
@@ -462,6 +445,63 @@ footer {
     }
 
 
+
+
+/* ---------------------------------------- Project Intro Section ------------------------------------------ */
+
+
+section.project-intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+  .project-intro .block {
+    margin: 0 auto;
+  }
+
+    .project-hero-img {
+      width: 100%;
+      height: 450px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #schecker-hero img {
+      width: 55%;
+      min-width: 320px;
+      height: auto;
+      margin-top: 10%;
+    }
+
+    #schecker-hero {
+      position: relative;
+    }
+    #schecker-hero:before {
+      content: "";
+      width: 100%;
+      height: 220px;
+      background-color: #e0dfdf;
+      position: absolute;
+      bottom: 0;
+      z-index: -1000;
+    }
+
+    #schecker-intro {
+      background-color: #e0dfdf;
+      padding-top: 10%;
+      padding-bottom: 5%;
+    }
+
+section#schecker-draggable-flow {
+  background-color: #e0dfdf;
+  width: auto;
+  height: 700px;
+  padding-top: 1%;
+}
+
+
 #schecker-viewInvisionCTA {
   display: none;
 }
@@ -530,75 +570,37 @@ img.mpf-hiw-img {
 
 /* ------------------------------------------------------------------------------------------- */
 
-@media screen and (max-width: 730px) {
-
-  .hiw-section .block:nth-of-type(1) { -webkit-box-ordinal-group: 2; -ms-flex-order: 1; order: 1; }
-  .hiw-section .block:nth-of-type(2) { -webkit-box-ordinal-group: 3; -ms-flex-order: 2; order: 2; }
-  .hiw-section .block:nth-of-type(3) { -webkit-box-ordinal-group: 5; -ms-flex-order: 4; order: 4; }
-  .hiw-section .block:nth-of-type(4) { -webkit-box-ordinal-group: 4; -ms-flex-order: 3; order: 3; }
-  .hiw-section .block:nth-of-type(5) { -webkit-box-ordinal-group: 6; -ms-flex-order: 5; order: 5; }
-  .hiw-section .block:nth-of-type(6) { -webkit-box-ordinal-group: 7; -ms-flex-order: 6; order: 6; }
-  .hiw-section .block:nth-of-type(7) { -webkit-box-ordinal-group: 9; -ms-flex-order: 8; order: 8; }
-  .hiw-section .block:nth-of-type(8) { -webkit-box-ordinal-group: 8; -ms-flex-order: 7; order: 7; }
+@media screen and (max-width: 731px) {
 
   .block {
-    padding: 5% 20px;
+    width: 100%;
   }
 
-      .hiw.input {
-        margin-top: 0;
-      }
 
       #mpf_home-illustration {
         margin-top: 0;
       }
 
+footer {
+  justify-content: center;
+}
+  .footer-links {
+    margin-top: 25px;
+    text-align: center;
+  }
+    .footer-links a {
+      text-align: center;
+    }
+
 }
 
 /* ------------------------------------------------------------------------------------ */
-
-@media screen and (max-width: 610px) {
-
-  footer {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column wrap;
-            flex-flow: column wrap;
-    padding: auto 25px;
-  }
-
-    #copyright {
-      margin-top: 25px;
-    }
-}
 
 
 
 @media screen and (max-width: 375px) {
 
-  .wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    padding: 20px 20px;
-  }
 
-  .block {
-    width: 100%;
-    min-width: auto;
-    padding: 20px 0;
-  }
-
-  .block.intro {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 auto;
-            flex: 0 1 auto;
-  }
 }
 
 @media screen and (max-width: 320px) {
