--- a/myStyle.css
+++ b/myStyle.css
@@ -208,27 +208,36 @@ a#emailIcon {
           justify-content: center;
 }
 
-      #emailIcon:before {
-        content: "Interested? Shoot me a line";
-        position: absolute;
-        right: 120%;
-        text-align: right;
-        font-size: .7em;
-        font-weight: 400;
-        letter-spacing: .09em;
-        white-space: nowrap;
-        opacity: 0;
-        transform: scaleX(0);
-        transform-origin: right;
-        transition: .13s ease-in-out;
-        transition-delay: .12s;
-      }
+#emailIcon:before {
+  content: "Interested? Shoot me a line";
+  position: absolute;
+  right: 120%;
+  text-align: right;
+  font-size: .7em;
+  font-weight: 400;
+  letter-spacing: .09em;
+  white-space: nowrap;
+  opacity: 0;
+  -webkit-transform: scaleX(0);
+      -ms-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: right;
+      -ms-transform-origin: right;
+          transform-origin: right;
+  -webkit-transition: .13s ease-in-out;
+  -o-transition: .13s ease-in-out;
+  transition: .13s ease-in-out;
+  -webkit-transition-delay: .12s;
+       -o-transition-delay: .12s;
+          transition-delay: .12s;
+}
 
-      #emailIcon:hover:before {
-        opacity: 1;
-        transform: scaleX(1);
-      }
-
+#emailIcon:hover:before {
+  opacity: 1;
+  -webkit-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+          transform: scaleX(1);
+}
 
 
 
@@ -262,19 +271,23 @@ a#emailIcon {
     		}
 
 
-            .section-bullet:first-child:before,
-            .section-bullet:nth-child(2):before,
-            .section-bullet:nth-child(3):before,
-            .section-bullet:nth-child(4):before,
-            .section-bullet:last-child:before {
-              font-size: .8em;
-              opacity: 0;
-              position: absolute;
-              transform: rotate(90deg);
-              transform-origin: left;
-              top: 13px;
-              white-space: nowrap;
-            }
+        .section-bullet:first-child:before,
+        .section-bullet:nth-child(2):before,
+        .section-bullet:nth-child(3):before,
+        .section-bullet:nth-child(4):before,
+        .section-bullet:last-child:before {
+          font-size: .8em;
+          opacity: 0;
+          position: absolute;
+          -webkit-transform: rotate(90deg);
+              -ms-transform: rotate(90deg);
+                  transform: rotate(90deg);
+          -webkit-transform-origin: left;
+              -ms-transform-origin: left;
+                  transform-origin: left;
+          top: 13px;
+          white-space: nowrap;
+        }
 
             .section-bullet:first-child:before {
               content: "Intro";
@@ -567,12 +580,21 @@ section.intro {
 
 /* Side Projects Section */
 section.side-projects {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: auto;
   min-height: 100vh;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
   .side-projects .content-wrapper {
@@ -606,12 +628,19 @@ section.side-projects {
 #projects {
   background-color: #e0dfdf;
 }
-  .device-wrapper {
-      display: flex;
-      flex-flow: row;
-      justify-content: center;
-      width: 50vw;
-  }
+.device-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row;
+            flex-flow: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 50vw;
+}
       .device-wrapper img {
         width: 100%;
         height: 100%;
@@ -719,19 +748,28 @@ section.side-projects {
 .wrapper-incubation {
   margin: 3% auto;
 }
-  .incubation-tile {
-    width: 300px;
-    height: 400px;
-    border-radius: 50%/60% 60% 40% 40%;
-    overflow: hidden;
-    margin: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: .3s;
-    background: #000000;
-    box-shadow: 0 2px 40px 0 rgba(221,221,221,0.50);
-  }
+.incubation-tile {
+  width: 300px;
+  height: 400px;
+  border-radius: 50%/60% 60% 40% 40%;
+  overflow: hidden;
+  margin: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+  background: #000000;
+  -webkit-box-shadow: 0 2px 40px 0 rgba(221,221,221,0.50);
+          box-shadow: 0 2px 40px 0 rgba(221,221,221,0.50);
+}
   .decorative-line {
     width: 8%;
     height: 1px;
@@ -749,12 +787,19 @@ section.side-projects {
         height: 220px;
         border-radius: 100%;
         background: #FFFFFF;
-        box-shadow: 2px 2px 10px 0 rgba(0,0,0,0.20);
+        -webkit-box-shadow: 2px 2px 10px 0 rgba(0,0,0,0.20);
+                box-shadow: 2px 2px 10px 0 rgba(0,0,0,0.20);
         background-color: rgba(255, 255, 255, 0.8);
         position: absolute;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         z-index: 100;
         visibility: hidden;
       }
@@ -764,15 +809,18 @@ section.side-projects {
         height: auto;
       }
 
-  #wishUp-tile {
-    background-image: linear-gradient(0deg, #000000 17%, #390B48 100%);
-    background-color: black;
-  }
-
-      img#wishUp-mockup-ip {
-        width: 90%;
-        height: auto;
+      #wishUp-tile {
+        background-image: -webkit-gradient(linear, left bottom, left top, color-stop(17%, #000000), to(#390B48));
+        background-image: -webkit-linear-gradient(bottom, #000000 17%, #390B48 100%);
+        background-image: -o-linear-gradient(bottom, #000000 17%, #390B48 100%);
+        background-image: linear-gradient(0deg, #000000 17%, #390B48 100%);
+        background-color: black;
       }
+
+          img#wishUp-mockup-ip {
+            width: 90%;
+            height: auto;
+          }
 
 
 
@@ -789,9 +837,17 @@ section.side-projects {
   min-height: 320px;
   overflow: hidden;
   margin: 2%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
   transition: .3s;
 }
 
@@ -811,7 +867,8 @@ section.side-projects {
     }
 
     .project-tile:hover {
-      box-shadow: 4px 2px 10px 0 rgba(0,0,0,0.30);
+      -webkit-box-shadow: 4px 2px 10px 0 rgba(0,0,0,0.30);
+              box-shadow: 4px 2px 10px 0 rgba(0,0,0,0.30);
     }
 
 
@@ -822,7 +879,9 @@ section.side-projects {
 
 /* About me */
 #about .content-wrapper {
-  justify-content: space-evenly;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .my-portrait {
