--- a/myStyle.css
+++ b/myStyle.css
@@ -840,6 +840,7 @@ section.side-projects {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
