--- a/myStyle.css
+++ b/myStyle.css
@@ -622,7 +622,6 @@ section.side-projects {
                 flex-direction: column;
         padding: 25px;
         width: 40%;
-        min-width: 320px;
       }
 
 #projects {
@@ -644,7 +643,6 @@ section.side-projects {
       .device-wrapper img {
         width: 100%;
         height: 100%;
-        min-width: 320px;
       }
 
           h5.small-label {
@@ -833,8 +831,8 @@ section.side-projects {
 .project-tile {
   width: 42vw;
   height: 60vh;
-  min-width: 320px;
-  min-height: 320px;
+  min-width: 310px;
+  min-height: 310px;
   overflow: hidden;
   margin: 2%;
   display: -webkit-box;
@@ -888,8 +886,6 @@ section.side-projects {
 
 .my-portrait {
   width: 32%;
-  min-width: 320px;
-  max-width: 600px;
   margin: 25px;
 }
     .my-portrait svg {
@@ -922,9 +918,18 @@ footer {
 /* ----------------------------------------------------------------------------------------------- */
 
 
-@media screen and (max-width: 783px) {
+@media screen and (max-width: 768px) {
+  .content-wrapper .content-column {
+    width: 100%;
+  }
+  .project-tile {
+    width: 100%;
+  }
   .decorative-line {
     display: none;
+  }
+  .my-portrait {
+    width: 90%;
   }
 }
 
